# spatialdata-notebooks

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  conf.py  index.md  notebooks.md  pyproject.toml
.github/workflows/: test.yaml
_static/css/: custom.css
datasets/: README.md  Readme.md
docs/: api.md  conf.py  developer_docs.md  index.md
docs/notebooks/: example.ipynb
extensions/: fetch_s3_datasets.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  aggregation.ipynb  example.ipynb  nanostring_cosmx_nsclc.py  spatial-query.ipynb  squidpy-integration.ipynb  transformations.ipynb  transformations_examples.ipynb  transformations_examples.py  visium_cnv_lundeberg.py  visium_endometrium.py  xenium_and_visium.md  xenium_and_visium.py
notebooks/analyses/: lundeberg.ipynb  xenium_and_visium.ipynb
notebooks/developers_resources/storage_format/: .gitignore  Readme.md  Untitled.ipynb  __template__.ipynb  _latest_run_notebook.ipynb  index.html  io_utils.py  multiple_elements.ipynb  transformation_affine.ipynb  transformation_identity.ipynb  transformation_scale.ipynb  transformation_sequence.ipynb  transformation_translation.ipynb
notebooks/developers_resources/storage_format/multiple_elements.zarr/: .zattrs  zmetadata
notebooks/developers_resources/storage_format/multiple_elements.zarr/images/blobs_image/: .zattrs
notebooks/developers_resources/storage_format/multiple_elements.zarr/images/blobs_multiscale_image/: .zattrs
notebooks/developers_resources/storage_format/multiple_elements.zarr/labels/: .zattrs
notebooks/developers_resources/storage_format/multiple_elements.zarr/labels/blobs_labels/: .zattrs
notebooks/developers_resources/storage_format/multiple_elements.zarr/labels/blobs_multiscale_labels/: .zattrs
notebooks/developers_resources/storage_format/multiple_elements.zarr/points/blobs_points/: .zattrs
notebooks/developers_resources/storage_format/multiple_elements.zarr/shapes/blobs_circles/: .zattrs  shapes.parquet
notebooks/developers_resources/storage_format/multiple_elements.zarr/shapes/blobs_multipolygons/: .zattrs  shapes.parquet
notebooks/developers_resources/storage_format/multiple_elements.zarr/shapes/blobs_polygons/: .zattrs  shapes.parquet
notebooks/developers_resources/storage_format/transformation_affine.zarr/: zmetadata
notebooks/developers_resources/storage_format/transformation_identity.zarr/: zmetadata
notebooks/developers_resources/storage_format/transformation_scale.zarr/: zmetadata
notebooks/developers_resources/storage_format/transformation_sequence.zarr/: zmetadata
notebooks/developers_resources/storage_format/transformation_translation.zarr/: zmetadata
notebooks/examples/: aggregation.ipynb  alignment_using_landmarks.ipynb  alignment_utils.py  create_cells_dataset.ipynb  densenet.ipynb  densenet_utils.py  generate_toc.py  intro.ipynb  labels_shapes_interchangeability.ipynb  models.ipynb  models1.ipynb  models2.ipynb  napari_rois.ipynb  pixi.toml  sdata_from_scratch.ipynb  shapes_labels_interchangeability.ipynb  spatial_query.ipynb  speed_up_illustration.ipynb  squidpy_integration.ipynb  static_plot.ipynb  table-queries.ipynb  tables.ipynb  technology_cosmx.ipynb  technology_curio.ipynb  technology_merfish.ipynb  technology_mibitof.ipynb  technology_mouse_liver.ipynb  technology_spacem.ipynb  technology_stereoseq.ipynb  technology_visium.ipynb  technology_visium_hd.ipynb  technology_xenium.ipynb  transformations_advanced.ipynb
notebooks/paper_reproducibility/: 00_xenium_and_visium.ipynb  01_xenium_and_visium.ipynb  02_xenium_and_visium.ipynb  03_annotate_visium_cell2location.ipynb  04_copyKat_anndata.R  lundeberg.ipynb  nsclc_cosmx.ipynb  xenium_and_visium.ipynb
src/spatialdata_notebooks/: __init__.py
tests/: README.md  run_notebook.py  test_basic.py  test_run_notebook.py
(+89 files in other folders)
