[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "spatialdata_notebooks"
version = "0.0.1"
description = "Tutorials and examples for SpatialData"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "scverse"},
]
maintainers = [
    {name = "scverse", email = "core@scverse.org"},
]
urls.Documentation = "https://spatialdata-notebooks.readthedocs.io/"
urls.Source = "https://github.com/scverse/spatialdata-notebooks"
urls.Home-page = "https://github.com/scverse/spatialdata-notebooks"
dependencies = ["anndata"]

[project.optional-dependencies]
dev = [
    "pre-commit"
]
doc = [
    "sphinx>=4",
    "furo",
    "myst-parser",
    "sphinxcontrib-bibtex>=1.0.0",
    "scanpydoc[typehints]>=0.7.4",
    # For notebooks
    "nbsphinx",
    "ipykernel"
    "myst-nb",
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"
