[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "spatialdata_notebooks"
version = "0.0.1"
description = "Tutorials and examples for SpatialData"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "scverse"},
]
maintainers = [
    {name = "scverse", email = "core@scverse.org"},
]
urls.Documentation = "https://spatialdata-notebooks.readthedocs.io/"
urls.Source = "https://github.com/scverse/spatialdata-notebooks"
urls.Home-page = "https://github.com/scverse/spatialdata-notebooks"
dependencies = ["spatialdata", "squidpy"]

[project.optional-dependencies]
dev = [
    "pre-commit",
	"watermark"
]
doc = [
    "sphinx>=4.5",
    "sphinx-book-theme>=0.3.3",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
	"sphinx-design",
    # For notebooks
    "ipython>=8.6.0",
    "sphinx-copybutton",
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"

[tool.hatch.build.targets.wheel]
packages = ["notebooks"]
