[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "spatialdata_notebooks"
version = "0.0.1"
description = "Tutorials and examples for SpatialData"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "scverse"},
]
maintainers = [
    {name = "scverse", email = "core@scverse.org"},
]
urls.Documentation = "https://spatialdata-notebooks.readthedocs.io/"
urls.Source = "https://github.com/scverse/spatialdata-notebooks"
urls.Home-page = "https://github.com/scverse/spatialdata-notebooks"
dependencies = ["spatialdata", "squidpy>=1.6.2"]

[project.optional-dependencies]
dev = [
    "pre-commit",
	"watermark"
]
doc = [
    "sphinx>=4.5",
    "sphinx-book-theme>=0.3.3",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
	"sphinx-design",
    # For notebooks
    "ipython>=8.6.0",
    "sphinx-copybutton",
]

[tool.ruff]
line-length = 120
exclude = ["notebooks/developers_resources/storage_format/__template__.ipynb"]

[tool.ruff.lint]
ignore = ["E402", "F821"]

[tool.jupytext]
formats = "ipynb,md"

[tool.hatch.build.targets.wheel]
packages = ["notebooks"]
